--- a/styles/global.css
+++ b/styles/global.css
@@ -8,6 +8,16 @@ body {
   width: 1100px;
   margin: 0 auto;
   font-family: Raleway, sans-serif;
+  background-color: #FFF;
+
+  /* Создание стики футера*/
+  display: flex;
+  flex-direction: column;
+  min-height: 100%;
+}
+
+.main {
+  flex-grow: 1
 }
 
 h1,
