--- a/styles/style.css
+++ b/styles/style.css
@@ -21,12 +21,20 @@
 .header__links-list {
   display: flex;
   list-style: circle;
-  column-gap: 25px;
+  column-gap: 35px;
   letter-spacing: 0.18px;
 }
 
 .header__links-list-item:nth-child(1) {
   list-style: none;
+}
+
+.header__link {
+  text-underline-position: under;
+}
+
+.header__link_active {
+  text-decoration: none;
 }
 
 .header__logo-link {
@@ -47,6 +55,7 @@
   line-height: 1.52;
   letter-spacing: 0.18px;
   font-style: normal;
+  text-underline-position: under;
 }
 
 .cover {
@@ -192,8 +201,84 @@
 
 .about {
   display: grid;
-  grid-template: min-content/repeat(3, 1fr);
-  gap: 25px;
+  grid-template: repeat(2, min-content)/repeat(3, 1fr);
+  gap: 8px 25px;
   margin-top: 148px;
+  margin-bottom: 180px;
   padding: 0 24px;
+}
+
+.about__logo {
+  justify-self: center;
+  display: flex;
+  width: 240px;
+  height: 240px;
+  background-color: var(--black);
+  border-radius: 120px;
+}
+
+.about__logo-image {
+  width: 148px;
+  height: 114px;
+  margin: auto;
+}
+
+.about__title {
+  grid-column: 2/4;
+  text-transform: uppercase;
+  font-size: 40px;
+  font-weight: 700;
+  align-self: center;
+}
+
+.about__column {
+  grid-column: 2/4;
+  display: flex;
+  flex-direction: column;
+  row-gap: 24px;
+  padding-right: 5px;
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 1.2;
+}
+
+/*footer*/
+
+.footer {
+  display: flex;
+  justify-content: space-around;
+  padding-bottom: 88px;
+}
+
+/*Используем стили блока address*/
+.footer__address {
+  margin: 0;
+}
+
+.footer__menu {
+  text-align: center;
+  font-size: 18px;
+}
+
+.footer__menu-list {
+  list-style: none;
+}
+
+.footer__menu-link {
+  text-underline-position: under;
+}
+
+.footer__menu-link_active {
+  text-decoration: none;
+}
+
+.footer__social-list {
+  list-style: none;
+  display: flex;
+  column-gap: 48px;
+}
+
+.footer__social-icon {
+  width: 48px;
+  height: 48px;
 }
