--- a/styles/style.css
+++ b/styles/style.css
@@ -5,8 +5,10 @@
   --white: #FFF;
 }
 
+/* Header (шапка сайта) */
+
 .header {
-  padding: 92px 52px 94px;
+  padding: 92px 52px 95px;
   display: grid;
   grid-template: min-content/1fr min-content 1fr;
   font-size: 18px;
@@ -47,6 +49,8 @@
   height: 105px;
 }
 
+/* Компонент adress*/
+
 .address {
   width: fit-content;
   margin-left: auto;
@@ -57,6 +61,8 @@
   font-style: normal;
   text-underline-position: under;
 }
+
+/* Секция cover */
 
 .cover {
   height: 757px;
@@ -201,14 +207,14 @@
   font-size: 20px;
 }
 
-/* Секция about*/
+/* Секция about */
 
 .about {
   display: grid;
   grid-template: repeat(2, min-content)/repeat(3, 1fr);
   gap: 8px 25px;
-  margin-top: 148px;
-  margin-bottom: 180px;
+  margin-top: 183px;
+  margin-bottom: 100px;
   padding: 0 24px;
 }
 
@@ -250,8 +256,8 @@
 
 .footer {
   display: flex;
-  justify-content: space-around;
-  padding-bottom: 88px;
+  justify-content: space-between;
+  padding: 80px 50px 88px;
 }
 
 /*Используем стили блока address*/
