--- a/styles/style.css
+++ b/styles/style.css
@@ -8,7 +8,7 @@
 /* Header (шапка сайта) */
 
 .header {
-  padding: 92px 52px 95px;
+  padding: 94px 52px 95px;
   display: grid;
   grid-template: min-content/1fr min-content 1fr;
   font-size: 18px;
@@ -49,17 +49,22 @@
   height: 105px;
 }
 
+.header__address {
+  align-self: center;
+}
+
 /* Компонент adress*/
 
 .address {
-  width: fit-content;
-  margin-left: auto;
+  width: max-content;
   display: flex;
   flex-direction: column;
-  line-height: 1.52;
-  letter-spacing: 0.18px;
   font-style: normal;
+  line-height: 1.34;
+  letter-spacing: 0.18px;
   text-underline-position: under;
+  margin-right: 34px;
+  margin-left: auto;
 }
 
 /* Секция cover */
@@ -82,7 +87,7 @@
   font-size: 100px;
   font-weight: bold;
   letter-spacing: 30px;
-  line-height: 1.15;
+  line-height: 1.1;
 }
 
 .aligned-text_center {
@@ -104,7 +109,7 @@
 }
 
 .cover__description {
-  margin-top: 135px;
+  margin-top: 130px;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -114,7 +119,7 @@
   margin-left: 28px;
   font-size: 22px;
   line-height: 1.27;
-  word-spacing: 24px;
+  word-spacing: 18px;
 }
 
 .bet-button {
@@ -252,6 +257,10 @@
   line-height: 1.2;
 }
 
+.about__text_spasing {
+  letter-spacing: 0.8px;
+}
+
 /*footer*/
 
 .footer {
@@ -263,9 +272,13 @@
 /*Используем стили блока address*/
 .footer__address {
   margin: 0;
+  line-height: 1.5;
+  letter-spacing: 1px;
+  font-weight: 400;
 }
 
 .footer__menu {
+  margin-left: 40px;
   text-align: center;
   font-size: 18px;
 }
