--- a/styles/style.css
+++ b/styles/style.css
@@ -103,6 +103,7 @@
 
   text-align: center;
   margin-left: -60px;
+  line-height: 1;
 }
 
 .aligned-text_right {
@@ -127,7 +128,7 @@
 }
 
 .cover__description {
-  margin-top: 130px;
+  margin-top: 138px;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -149,13 +150,13 @@
   color: var(--white);
   font-size: 22px;
   text-align: center;
-  font-family: inherit;
+  font-family: Raleway, sans-serif;
 }
 
 /* Секция lots*/
 
 .lots {
-  margin-top: 179px;
+  margin-top: 178px;
   padding: 0 24px 3px;
 }
 
@@ -184,7 +185,7 @@
   font-size: 20px;
   text-underline-position: under;
   margin-left: 40px;
-  margin-top: 30px;
+  margin-top: 28px;
 }
 
 /* Карточка-лот */
@@ -243,7 +244,7 @@
   display: grid;
   grid-template: repeat(2, min-content)/repeat(3, 1fr);
   gap: 8px 25px;
-  margin-top: 183px;
+  margin-top: 180px;
   margin-bottom: 100px;
   padding: 0 24px;
 }
